# BattleshipsHW

./: .clang-format  .gitignore  CMakeLists.txt  COMPILE INSTRUCTIONS.md  README.md
include/: AiPlayer.h  Game.h  Grid.h  GridRenderer.h  HumanPlayer.h  Player.h  Ship.h
src/: AiPlayer.cpp  Game.cpp  Grid.cpp  GridRenderer.cpp  HumanPlayer.cpp  Player.cpp  Ship.cpp  main.cpp
